# Rust-Swift-Raytracer

./: .gitignore  Cargo.toml  README.md  TODO.txt  build.rs  build.sh
MacOSPlatform/Engine/includes/: rust_raytracer.h
MacOSPlatform/MacOSPlatform/: ContentView.swift  Framebuffer.swift  GameView.swift  MacOSPlatform-Bridging-Header.h  Menu.swift  Toolbar.swift  Utils.swift  main.swift  world.txt
MacOSPlatform/MacOSPlatform.xcodeproj/: project.pbxproj
MacOSPlatform/MacOSPlatform/Assets.xcassets/AppIcon.appiconset/: Contents.json
MacOSPlatform/MacOSPlatform/Engine/includes/: raytracer.h  rust_raytracer.h
MacOSPlatform/scripts/: make_appimages.sh
benches/dynamic_vs_enum_dispatch/: dynamic_dispatch.rs  enum_dispatch.rs  maths.rs  shared.rs
examples/: c_raytracer.rs
examples/MacOSPlatform/Engine/includes/: rust_raytracer.h
examples/MacOSPlatform/MacOSPlatform/: ContentView.swift  MacOSPlatformApp.swift
examples/MacOSPlatform/MacOSPlatform.xcodeproj/: project.pbxproj
raytracer/: Cargo.toml  cbindgen.toml
raytracer/benches/dynamic_vs_enum_dispatch/: dynamic_dispatch.rs  main.rs  maths.rs
raytracer/src/: camera.rs  color.rs  common.rs  image.rs  lib.rs  main.rs  materials.rs  parser.rs  random.rs
src/: camera.rs  common.rs  image.rs  lib.rs  main.rs  mat3.rs  materials.rs  maths.rs  parser.rs  world.txt
