[package]
name = "rust_raytracer"
version = "0.1.0"
authors = ["Ted Klein Bergman <tedber@kth.se>"]
edition = "2018"


[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "dynamic_vs_enum_dispatch"
harness = false


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[lib]
name = "raytracer"
path = "src/lib.rs"